Fix collapsed navbar

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -220,3 +220,7 @@ nav, .dropdown-menu {
     color: #fff;
     background-color: var(--dark-orange);
 }
+
+.pagination {
+    background-color: white;
+}
